--- a/templates/cocktail.html
+++ b/templates/cocktail.html
@@ -2,7 +2,7 @@
 {% block content %}
     <!--Cocktail Header-->
     <section class="cocktail-header">
-        <h1 class="page-title inline-block">{{ cocktail.cocktail_name.title() }}</h1>
+        <h1 class="cocktial-header__name inline-block">{{ cocktail.cocktail_name.title() }}</h1>
 
         <!--Bookmark-->
         <form id="bookmark" class="cocktail-header__bookmark-form" action="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" method="POST">
@@ -23,6 +23,7 @@
             </button>
         </form>
         {% if session.id == cocktail.author_id %}
+        <div class="cocktail-edit-container inline-block">
             <!--Author Edit Buttons-->
             <a href="{{ url_for('cocktail_create', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="cocktail-header__function cocktail-header__function--edit">
                 <i class="fas fa-pencil-alt"></i> Edit
@@ -30,6 +31,7 @@
             <a href="{{ url_for('delete_cocktail', cocktail_id=cocktail._id) }}" class="cocktail-header__function cocktail-header__function--delete">
                 <i class="fas fa-minus-circle"></i> Delete
             </a>
+        </div>
         {% endif %}
 
         <!--Cocktail Rating-->
@@ -79,12 +81,19 @@
         {% endif %}
     </section>
 
+     <!--Cocktail Image-->
+    <div class="row">
+        <div class="cocktail__img-contianer col-12">
+            <img class="cocktail__img" src="{{ cocktail.image }}" alt="cocktial image">
+        </div>
+    </div> 
+
     <!--Cocktail Info-->
     <section class="cocktail cocktail-body">
         <div class="cocktail__row row">
 
             <!--Cocktail Ingredients-->
-            <div class="cocktail__ingredients col-4">
+            <div class="cocktail__ingredients col-12 col-lg-6">
                 <h2 class="cocktail__item-title">Ingredients</h2>
                 <ul class="cocktail__info">
                     {% for i in range(0, cocktail.ingredients | length ) %}
@@ -116,13 +125,13 @@
                 <div class="cocktail__affiliate">
                     <h3>Get What You Need</h3>
                     <p>Find a wide range of alcohol and mixers here:</p>
-                    <a class="bottom-mar" href="https://www.masterofmalt.com/" target="_blank">Master of Malt</a>
+                    <a href="https://www.masterofmalt.com/" target="_blank" class="bottom-mar affiliate">Master of Malt</a>
                 </div>
 
             </div>
 
             <!--Cocktail Tools-->
-            <div class="cocktail__tools col-4">
+            <div class="cocktail__tools col-12 col-lg-6">
                 <h2 class="cocktail__item-title">Tools</h2>
                 <ul class="cocktail__info">
                     {% for i in range(0, cocktail.tools | length) %}
@@ -140,13 +149,8 @@
                 <div class="cocktail__affiliate">
                     <h3>Missing a Tool</h3>
                     <p>Grab all the tools you need:</p>
-                    <a href="https://www.drinkstuff.com/products/cocktail-accessories.asp?nav=left" target="_blank">Drink Stuff</a>
+                    <a href="https://www.drinkstuff.com/products/cocktail-accessories.asp?nav=left" target="_blank" class= "affiliate">Drink Stuff</a>
                 </div>
-            </div>
-
-            <!--Cocktail Image-->
-            <div class="cocktail__img-contianer col-4">
-                <img class="cocktail__img" src="{{ cocktail.image }}" alt="cocktial image">
             </div>
         </div>
 
