--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-    <section class="center-page">
-        <p>404 Errorrrrr</p>
-        <a href="{{ url_for('home') }}" class="cta">here</a>
+    <section class="center-page center-text">
+        <h1 class="four-o-title"><i class="fas fa-exclamation-circle"></i><br>404 Error</h1>
+        <h2>Page Not Found</h2>
+        <h2>You seem to be lost! We Can get you home.</h2>
+        <a href="{{ url_for('home') }}" class="cta cta--create cta--four-o">here</a>
     </section>
 {% endblock %}
