css: Fix syntax error

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1458,6 +1458,7 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
     font-size: 2rem;
     position: relative;
     bottom: 5px;
+}
 
 .cocktail__affiliate {
     margin-top: 50px;
