Update style of flash messages and removed duplicate

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,7 +111,7 @@
                 {% for message in messages %}
                     <!--Flash Message-->
                     <div class="flash-massage under-header">
-                        <h4>{{ message }}</h4>
+                        <h4 class="message">{{ message }}</h4>
                     </div>
                 {% endfor %}
             {% endif %}
