--- a/static/css/style.css
+++ b/static/css/style.css
@@ -282,11 +282,19 @@ button:focus {
 
 /*------------------------------------------------------Flash Massage--*/
 .flash-massage {
-    margin: 0 auto;
     text-align: center;
-    color: blue;
-    padding: 10px 0;
-    font-size: 1.25rem;
+    color: white;
+    padding: 5px 0;
+    font-size: 0.75rem;
+    background-color: rgb(36, 138, 255);
+    position: absolute;
+    top: 69px;
+    width: 100%;
+    left: 0;
+}
+
+.message {
+    margin: 2px 0;
 }
 
 /*------------------------------------------------------Site Header--*/
