--- a/templates/cocktail.html
+++ b/templates/cocktail.html
@@ -165,5 +165,8 @@
                 </ol>
             </div>
         </div>
+        <div class="center-text">
+            <a href="{{ url_for('home') }}" class="cta cta--home">Home</a>
+        </div>
     </section>
 {% endblock %}
