--- a/templates/search.html
+++ b/templates/search.html
@@ -40,4 +40,7 @@
             {% endif %}
         </section>
     {% endfor %}
+    <div class="center-text">
+        <a href="{{ url_for('home') }}" class="cta cta--home">Home</a>
+    </div>
 {% endblock %}
