Update cocktail create/edit form to block against reloaded resubmission

--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -177,6 +177,8 @@
             <input type="hidden" id="no-of-tools" name="no-of-tools" value="0">
             <input type="hidden" id="no-of-instr" name="no-of-instr" value="0">
             <input type="hidden" id="no-of-tips" name="no-of-tips" value="0">
+            <!--Random Form No-->
+            <input type="hidden" id="random" name="random" value="{{ range(1, 10000000) | random }}">
             <div class="row">
                 <div class="form-cocktail__submit col-12">
                     <!--Cancel Add Cocktail-->
