--- a/templates/cocktail-edit.html
+++ b/templates/cocktail-edit.html
@@ -33,7 +33,7 @@
                     <label for="cocktial-img" class="form__label">Copy and Paster Cocktail Image URL</label>
                     <p>Image will preview if URL valid after you click away.</p>
                     <p>Commonly the URL will end with the file name and .jpg, .jpeg or .png</p>
-                    <input type="url" id="cocktail-img-url" name="cocktail-img-url" class="form-cocktail__input form-cocktail__input--url" placeholder="Enter URL for cocktail image eg. https//www.example.com/image" required>
+                    <input type="url" id="cocktail-img-url" name="cocktail-img-url" class="form-cocktail__input form-cocktail__input--url" placeholder="Enter URL for cocktail image eg. https//www.example.com/image" value="{{ cocktail.image }}" required>
                 </div>
             </div>
             
@@ -214,6 +214,8 @@
             <input type="hidden" id="no-of-tools" name="no-of-tools" value="0">
             <input type="hidden" id="no-of-instr" name="no-of-instr" value="0">
             <input type="hidden" id="no-of-tips" name="no-of-tips" value="0">
+            <!--Random Form No-->
+            <input type="hidden" id="random" name="random" value="{{ range(1, 10000000) | random }}">
             <div class="row">
                 <div class="form-cocktail__submit col-12">
                     <!--Cancel Add Cocktail-->
