--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
                 <h2 class="hero__title">Featured Cocktail</h2>
                 <h2 class="hero__cocktail">{{ featured_cocktail.cocktail_name.title() }}</h2>
                 <hr class="hero__page-line page-line page-line--brand page-line--left">
-                <h3 class="hero__tagline">Test your skils<br>with one of our favourites.</h3>
+                <h3 class="hero__tagline">Test your skills<br>with one of our favourites.</h3>
                 <a class="hero__cta cta" href="{{ url_for('cocktail', cocktail_name=featured_cocktail.cocktail_name.replace(' ', '-'), cocktail_id=featured_cocktail._id) }}">Try It At Home</a>
             </div>
         </div>
