--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,7 @@
     <section>
        <form class="search-from form" action="{{ url_for('search') }}" method="POST">
             <input type="text" name="query" class="search-page-input">
-            <button class="search-page-btn cta cta--create" name="form-submit" value="search"><i class="fas fa-search"></i> Serach</button>
+            <button class="search-page-btn cta cta--create" name="form-submit" value="search"><i class="fas fa-search"></i> Search</button>
         </form>
     </section>
     {% for cat in cocktail_search_cats %}
