--- a/templates/cocktail-create.html
+++ b/templates/cocktail-create.html
@@ -5,12 +5,14 @@
         <h1 class="cocktail-header__title">Create Cocktail</h1>
 
         <!--Add Cocktail Form (in the style of view coctail page)-->
-        <form id="cocktail-create" class="form-cocktail" action="{{ url_for('cocktail_create') }}" method="POST">
+        <form id="cocktail-create" class="form-cocktail needs-validation" action="{{ url_for('cocktail_create') }}" method="POST" novalidate>
 
             <!--Cocktail Name-->
             <label for="cocktail-name" class="form__label">Enter Cocktail Name</label>
-            <input type="text" name="cocktail-name" class="form-cocktail__input form-cocktail__input--title" id="cocktail-name" 
-                placeholder="Enter Cocktail Name" aria-label="enter cocktail name" maxlength="15" required>
+            <input type="text" name="cocktail-name" class="form-cocktail__input form-cocktail__input--title" id="cocktail-name" placeholder="Enter Cocktail Name" aria-label="enter cocktail name" maxlength="15" required>
+            <div class="invalid-feedback">
+                <p>Missing</p>
+            </div>
             <div class="cocktail-header__star-rating">
                 <p>
                     <span>(No rating yet)</span>
@@ -45,13 +47,18 @@
                             <!--Amount-->
                             <input type="text" id="ingredient-amount-1" name="ingredient-amount-1" class="form-cocktail__input form-cocktail__input--amount"
                                 pattern="^[0-9.]{0,5}$" maxlength="5" placeholder="25" aria-label="enter amount of main alcohol" required>
-                            
+                            <div class="invalid-feedback">
+                                <p>Missing or contains illegal character. Numbers and period only.</p>
+                            </div>
+
                             <!--Unit-->    
                             <input type="text" id="ingredient-unit-1" name="ingredient-unit-1" class="form-cocktail__input form-cocktail__input--fixed" value="ml" aria-label="ml main alcohol unit" readonly>
-                                
+
                             <!--Name--> 
-                            <input type="text" id="ingredient-name-1" name="ingredient-name-1" class="form-cocktail__input" placeholder="Main Alcohol Name" 
-                                aria-label="enter name of main alcohol" required>
+                            <input type="text" id="ingredient-name-1" name="ingredient-name-1" class="form-cocktail__input" placeholder="Main Alcohol Name" aria-label="enter name of main alcohol" required>
+                            <div class="invalid-feedback">
+                                <p>Missing</p>
+                            </div>
 
                             <!--Alcohol Type-->
                             <select name="alcohol" id="alcohol" class="form-cocktail__input" aria-label="dropdown menu to select alcohol type" required>
@@ -60,6 +67,9 @@
                                     <option value="{{ alcohol.alcohol_name.lower() }}">{{ alcohol.alcohol_name }}</option>
                                 {% endfor %}
                             </select>
+                            <div class="invalid-feedback">
+                                <p>Please select an alcohol</p>
+                            </div>
                         </li>
 
                         <!--2nd Ingredient-->
@@ -68,7 +78,10 @@
                              <!--Amount-->
                             <input type="text" id="ingredient-amount-2" name="ingredient-amount-2" class="form-cocktail__input form-cocktail__input--amount"
                                 pattern="^[0-9.]{0,5}$" maxlength="5" placeholder="Amount" aria-label="enter amount of ingredient" required>
-                            
+                            <div class="invalid-feedback">
+                                <p>Missing or contains illegal character. Numbers and period only.</p>
+                            </div>
+
                             <!--Unit-->
                             <select id="ingredient-unit-2" name="ingredient-unit-2" class="form-cocktail__input" aria-label="dropdown menu to select a unit type" required>
                                 <option value="" disabled selected hidden>Unit</option>
@@ -76,10 +89,15 @@
                                     <option value="{{ unit.name }}">{{ unit.name }}</option>
                                 {% endfor %}
                             </select>
+                            <div class="invalid-feedback">
+                                <p>Please select unit</p>
+                            </div>
 
                             <!--Name-->
-                            <input type="text" id="ingredient-name-2" name="ingredient-name-2" class="form-cocktail__input" placeholder="Ingredient Name" 
-                                aria-label="enter ingredient name" required>
+                            <input type="text" id="ingredient-name-2" name="ingredient-name-2" class="form-cocktail__input" placeholder="Ingredient Name" aria-label="enter ingredient name" required>
+                            <div class="invalid-feedback">
+                                <p>Missing</p>
+                            </div>
                         </li>
                     </ul>
                     
@@ -96,10 +114,16 @@
                             <!--Amount-->
                             <input type="text" id="garnish-amount-1" name="garnish-amount-1" class="form-cocktail__input form-cocktail__input--amount" 
                                 pattern="^[0-9.]{0,5}$" maxlength="5" placeholder="Amount" aria-label="enter garnish amount" required>
+                            <div class="invalid-feedback">
+                                <p>Missing or contains illegal character. Numbers and period only.</p>
+                            </div>
                             
                             <!--Name-->
                             <input type="text" id="garnish-name-1" name="garnish-name-1" class="form-cocktail__input" placeholder="Garnish Name" 
                                 aria-label="enter garnish name" required>
+                            <div class="invalid-feedback">
+                                <p>Missing</p>
+                            </div>
                             
                             <!--Remove Item Button-->
                             <button class="remove-garnish cocktail-btn cocktail-btn--remove" type="button">
@@ -125,6 +149,9 @@
                                     <option value="{{ tool.name }}">{{ tool.name.title() }}</option>
                                 {% endfor %}
                             </select>
+                            <div class="invalid-feedback">
+                                <p>Please select tool. Remove if not being used.</p>
+                            </div>
 
                             <!--Remove Tool-->
                             <button class="remove-tool cocktail-btn cocktail-btn--remove" type="button">
@@ -148,6 +175,9 @@
                                     <option value="{{ glass.name }}">{{ glass.name.title() }}</option>
                                 {% endfor %}
                             </select>
+                            <div class="invalid-feedback">
+                                <p>Please select a glass.</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -161,6 +191,9 @@
                         <li class="instruction">
                             <textarea id="instruction-1" name="instruction-1" class="form-cocktail__input form-cocktail__text-area" 
                                 rows="3" placeholder="Type Instructions Here" maxlength="400" aria-label="enter instruction" required></textarea>
+                            <div class="invalid-feedback">
+                                <p>Empty.</p>
+                            </div>
                         </li>
                     </ol>
 
@@ -193,4 +226,5 @@
 {% endblock %}
 {% block scripts %}
     <script defer src="{{ url_for('static', filename='js/cocktail-form.js') }}"></script>
+    <script defer src="{{ url_for('static', filename='js/form-validation-handler.js') }}"></script>
 {% endblock %}
